# Transformer-VM-Bank

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  REPRODUCE.md  SECURITY.md  VERIFICATION.md  deny.toml  pyproject.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  security.yml
agent_contracts/: Cargo.toml
agent_contracts/fuzz/: Cargo.toml
agent_contracts/fuzz/fuzz_targets/: swap_run.rs  transfer_run.rs
agent_contracts/src/: conditional.rs  error.rs  escrow.rs  guarded.rs  lib.rs  program.rs  swap.rs  transfer.rs
agent_protocol/: Cargo.toml
agent_protocol/fuzz/: Cargo.toml
agent_protocol/fuzz/fuzz_targets/: decode_protocol_message.rs
agent_protocol/src/: dispute.rs  error.rs  lib.rs  message.rs  registry.rs  reputation.rs  state_machine.rs
agent_protocol/tests/: adversarial_dispute.rs
agent_sdk/: Cargo.toml
agent_sdk/examples/: service_agent.rs  trader_agent.rs
agent_sdk/src/: agent.rs  error.rs  lib.rs  onchain.rs  transport.rs
agent_wallet/: Cargo.toml
agent_wallet/src/: error.rs  lib.rs  policy.rs  revocation.rs  rotation.rs  slip10.rs
agent_wallet/tests/: proptest_invariants.rs
consensus/: Cargo.toml
consensus/src/: abci.rs  lib.rs  sovereign.rs
crypto/: Cargo.toml
crypto/src/: account.rs  hash.rs  lib.rs  signature.rs  smt.rs  trace_hash.rs
crypto/tests/: randomized.rs
crypto_agility/: Cargo.toml
crypto_agility/src/: codec.rs  errors.rs  hash.rs  hybrid.rs  kem.rs  lib.rs  scheme.rs  signer.rs  witness_enc.rs
crypto_agility/tests/: cross_platform_determinism.rs  proptest_agility.rs
docs/: ARCHITECTURE.md  AUDIT_BRIEF.md  AUDIT_FINDINGS.md  COMPLIANCE.md  CONSENSUS_DECISION.md  DR_DRILL_PLAN.md  FINDINGS.md  FUZZING.md  INDEX.md  LICENSE_REVIEW.md  MIGRATION_GUIDE.md  OPERATIONAL_READINESS.md  REPRODUCIBILITY_REPORT.md  SAFETY.md  SECURITY.md  SECURITY_REVIEW.md  SESSION_SUMMARY.md  SOVEREIGN_MODE_TRUST.md  STATUS.md  STYLE_GUIDE_v3.md  UNWRAP_AUDIT.md  UPSTREAM_BUG_lower_py_runtime_or.md
docs/archive/primitives/: ledger_freeze.c  (+11 more)
docs/blog/: agent-layer-launch.md
docs/decisions/: 0001-retire-legacy-fp64-runner.md  0002-bft-consensus-engine-selection.md  0003-publication-strategy-v0.1.0.md  0004-public-test-network-deferred.md  0005-licensing-export-patent-posture.md  0006-post-quantum-cryptography-strategy.md  0007-cryptographic-agility-architecture.md  0008-blake3-512-for-long-lived-commitments.md  0011-hybrid-kem-x25519-mlkem768.md  0012-defer-sled-migration-to-v0.2.md  0013-defer-tps-bench-maturation-to-v0.2.md
docs/runbooks/: consensus-halt.md  dispute-storm.md  dr-restore.md  follower-lag.md  light-client-divergence.md  sequencer-key-compromise.md
docs/whitepaper/: PSL.md
infra/: README.md  backend.tf.example  main.tf  outputs.tf  variables.tf
lean/: PSL.lean  README.md  drift_manifest.json  lake-manifest.json  lakefile.lean
lean/PSL/: Account.lean  Audit.lean  BlockAccounting.lean  Compliance.lean  Conservation.lean  Determinism.lean  Ledger.lean  LedgerInvariants.lean  MPT.lean  SMTModel.lean
legacy/rust_runner/: Cargo.toml  README.md
light_client/: Cargo.toml
light_client/src/: header.rs  lib.rs  proof.rs
light_client/tests/: gate6.rs
ops/: alertmanager.yml  docker-compose.yml  loki.yml  prometheus.yml  promtail.yml  tempo.yml
ops/alerts/: agents.yml  backup.yml  light_client.yml  sequencer.yml
ops/dashboards/: psl-overview.json
outreach/: audit-engagement-ottersec.md  audit-engagement-trail-of-bits.md  audit-engagement-zellic.md
pilot/issuer_demo/: Cargo.toml  README.md
pilot/issuer_demo/src/: main.rs
primitives/: README.md  byte_add_with_carry.c  byte_sub_with_borrow.c  common.h  freeze_apply.c  freeze_setup.c  ledger_burn.c  ledger_freeze.c  mpt_emit_record.c  repro_freeze.c  repro_parse.c  repro_parse_flag.c  transfer_check.c  transfer_check_binary.c  transfer_compute.c  transfer_finalize.c  transfer_nonce_binary.c  transfer_parse.c  transfer_sub_binary.c
rust_runner/: Cargo.toml
rust_runner/src/: attention.rs  generate.rs  lib.rs  sparse.rs  transformer.rs  weights.rs
rust_runner/tests/: parity.rs
rust_runner/tests/golden/: byte_sub_with_borrow.expected  mpt_emit_record.expected
sdk-examples/: README.md
sdk-examples/python/: README.md  service_agent.py  trader_agent.py
sdk-examples/typescript/: README.md  package.json  service_agent.ts  trader_agent.ts  tsconfig.json
sequencer/: Cargo.toml
sequencer/src/: block.rs  compliance.rs  config.rs  issuer_registry.rs  lib.rs  main.rs  mempool.rs  node.rs  rpc.rs  state.rs  trace.rs  tx.rs
sequencer/tests/: compliance.rs  integration.rs
ternary_vm/: Cargo.toml
ternary_vm/fuzz/: Cargo.toml
ternary_vm/fuzz/fuzz_targets/: byte_add_run.rs  unpack_weights.rs
ternary_vm/src/: error.rs  lib.rs  network.rs  thermo.rs  trace_hash.rs  weights.rs
ternary_vm/src/primitives/: byte_add_with_carry.rs  byte_sub_with_borrow.rs  freeze_apply.rs  freeze_setup.rs  mod.rs  mpt_emit_record.rs  transfer_check.rs  transfer_finalize.rs
ternary_vm/tests/: exhaustive_byte_add.rs  exhaustive_byte_sub.rs  exhaustive_freeze_apply.rs  proptest_invariants.rs
tests/: conftest.py  test_bit_exact.py
tools/: apply_repo_meta.sh  backup.sh  build_all_primitives.sh  check_lean_drift.py  clang-wsl-wrapper.sh  compile.sh  dump_logits_python.py  gen_golden.py  gen_golden_singlethread.py  gen_vectors.py  load_test.sh  localize_drift.py  match_mkl_reduction.py  quarterly_consensus_review.sh  run_canonical_gate1.sh  run_freeze_batch.py  run_freeze_decomposed.py  run_freeze_decomposed_batched.py  run_mpt_10k.py  run_per_byte_10k.py  run_transfer_10k.py  run_transfer_4stage_10k.py  run_transfer_chain_10k.py  sbom.sh  smoke_freeze.py  smoke_transfer.py  smoke_transfer3.py  smoke_transfer4.py  smoke_transfer_binary.py  smoke_transfer_full.py  specialize.sh  verify_trace.py
tools/ci/: check_legacy_isolation.sh
(+16 files in other folders)
