[project]
name = "psl"
version = "0.1.0"
description = "Percepta Settlement Layer — deterministic transformer-VM-executed ledger"
requires-python = ">=3.10"
dependencies = [
    "blake3>=0.4.0",
    "pytest>=8.0",
    "torch>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: tests that take >10s",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
]
