[package]
name = "psl-crypto-agility"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cryptographic agility layer for PSL — scheme-prefixed signatures, KEM, and hashes per ADR-0007."

[dependencies]
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
# Trace-level diagnostics for hybrid-signature component failures.
# Per the hardening pass: outer error stays opaque
# (`VerifierError::HybridSignatureInvalid`); component-failure detail
# logs to `tracing::trace` only, never serialized.
tracing = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }

# Post-quantum: ML-DSA-65 (FIPS 204). pqcrypto-mldsa wraps the NIST
# reference (PQClean) C implementation; constant-time on the data path,
# audited as part of NIST's standardization. We use the standard
# randomized Sign (FIPS 204 §5.4); verification is deterministic. See
# `hybrid.rs` for the determinism invariant note.
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"

[dev-dependencies]
proptest = { workspace = true }
hex = { workspace = true }
