[package]
name = "psl-sequencer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PSL sovereign-mode sequencer: tx ingress, trace, MPT, RPC"

[lib]
name = "psl_sequencer"
path = "src/lib.rs"

[[bin]]
name = "psl-sequencer"
path = "src/main.rs"

[dependencies]
psl-crypto = { path = "../crypto" }
blake3.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-big-array.workspace = true
thiserror.workspace = true
tokio.workspace = true
hex.workspace = true
sled.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
toml = "0.8"
tempfile = "3.10"

[dev-dependencies]
rand.workspace = true
