[package]
name = "psl-agent-contracts-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
psl-agent-contracts = { path = ".." }

[[bin]]
name = "transfer_run"
path = "fuzz_targets/transfer_run.rs"
test = false
doc = false

[[bin]]
name = "swap_run"
path = "fuzz_targets/swap_run.rs"
test = false
doc = false
